Resolved the branch configured name mismatch. Aligned the styles of the branch as per the designs. Removed the dependency of fixed widths and heights as much as we can.

--- a/src/client/flogo/packages/diagram/_styles.less
+++ b/src/client/flogo/packages/diagram/_styles.less
@@ -5,6 +5,8 @@
 @tile-radius: 8px;
 @tile-color-bg: #fff;
 @tile-color-bg--selected: #4e7ead;
+@branch-color-primary: #afbbda;
+@branch-color-secondary: #899bcf;
 
 .flex-center() {
   display: flex;
